RESOLVED FIXED214409
Crash caused by clients that don't support isolated tree mode calling on the secondary thread.
https://bugs.webkit.org/show_bug.cgi?id=214409
Summary Crash caused by clients that don't support isolated tree mode calling on the ...
Andres Gonzalez
Reported 2020-07-16 09:01:22 PDT
Crash caused by clients that don't support isolated tree mode calling on the secondary thread.
Attachments
Patch (3.32 KB, patch)
2020-07-16 09:14 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-07-16 09:14:04 PDT
EWS
Comment 2 2020-07-16 10:43:17 PDT
Committed r264470: <https://trac.webkit.org/changeset/264470> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404444 [details].
Radar WebKit Bug Importer
Comment 3 2020-07-16 10:44:16 PDT
Alexey Proskuryakov
Comment 4 2020-07-18 11:51:47 PDT
*** Bug 214408 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 5 2020-07-18 11:51:51 PDT
*** Bug 214407 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.